# supabase-plus

./: .envrc  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  about.hbs  about.toml  flake.nix  sbp.toml.example
.github/workflows/: publish.yml
.zed/: settings.json
patches/: promptuity+0.0.5.patch  throbberous+0.1.4.patch
src/: cli.rs  codegen.rs  colors.rs  config.rs  errors.rs  main.rs  patched.rs  sys.rs  utils.rs
src/abstraction/: codewatch.rs  containers.rs  mod.rs  supabase.rs
src/abstraction/migrations/: bucket.rs  mod.rs  realtime.rs
src/abstraction/supabase/: mod.rs  project.rs  runtime.rs
src/commands/: commit.rs  completions.rs  mod.rs  prelude.rs  realtime.rs  running.rs  stop_any.rs  upgrade.rs  watch.rs
src/commands/create/: bucket.rs  mod.rs
src/commands/db/: commit.rs  mod.rs
src/commands/manage/: migrations.rs  mod.rs  realtime.rs
