[package]
name = "supabase-plus"
version = "0.4.1"
edition = "2024"
description = "An extra set of tools for managing Supabase projects going beyond the possibilities of regular Supabase CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dsplce-co/supabase-plus"
exclude = [".zed/*"]

[[bin]]
name = "sbp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
enum_variant_type = "0.3.1"
rust-shell = "0.2.0"
evt-trait-object = "0.1.0"
serde = { version = "1.0.160", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bollard = "0.19.3"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
clap_complete_command = "0.6.1"
homedir = "0.3.6"
promptuity = "0.0.5"
mime_guess = "2.0.5"
chrono = "0.4.42"
tokio-postgres = "0.7.15"
watchexec = "=8.0.1"
watchexec-signals = "5.0.0"
watchexec-events = "6.0.0"
notify-types = "2.0.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
anyhow = "1.0.100"
glob = "0.3.3"
