[package]
name = "supabase-plus"
version = "0.8.1"
edition = "2024"
description = "An extra set of tools for managing Supabase projects going beyond the possibilities of regular Supabase CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dsplce-co/supabase-plus"
exclude = [".zed/*", "assets/*"]
authors = ["v1olen <przemek@dsplce.co>", "d14mndz <barbara@dsplce.co>"]
build = "build.rs"
keywords = ["cli", "dx", "supabase", "qol"]
categories = ["command-line-utilities", "database"]

[package.metadata.patch]
crates = ["throbberous", "promptuity"]

[patch.crates-io]
throbberous = { path = "./target/patch/throbberous-0.1.4" }
promptuity = { path = "./target/patch/promptuity-0.0.5" }

[[bin]]
name = "sbp"
path = "src/main.rs"

[features]
default = []
dev = []

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
enum_variant_type = "0.3.1"
rust-shell = "0.2.0"
evt-trait-object = "0.1.0"
serde = { version = "1.0.160", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bollard = "0.19.3"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
clap_complete_command = "0.6.1"
homedir = "0.3.6"
dsplce-co-promptuity = { version = "0.0.5-supabase-plus-0.8" }
promptuity = "0.0.5"
mime_guess = "2.0.5"
chrono = "0.4.42"
tokio-postgres = "0.7.15"
watchexec = "=8.0.1"
watchexec-signals = "5.0.0"
watchexec-events = "6.0.0"
notify-types = "2.0.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
anyhow = "1.0.100"
glob = "0.3.3"
derive_setters = "0.1.8"
strum_macros = "0.27.2"
urlencoding = "2.1.3"
serde_json = "1.0.145"
supercli = { version = "0.1.1", features = ["clap"] }
heck = "0.5"
dsplce-co-throbberous = { version = "0.1.4-supabase-plus-0.8" }
throbberous = "0.1.4"
thiserror = "2.0.17"

[build-dependencies]
patch-crate = "0.1"
